
Future:
	SigINT should be heeded (Michael Tokarov)

ver 2.5.3:
	$DESTDIR in makefile for packaging glee.

ver 2.5.2:
	Configure fixes, to ensure vtun will build under Mac OS/X (Kurt Werle)
	exclude <rand.h> #inclusion under OS/X

ver 2.5.1:
	Cleanups, reformat code, Automake improvements (Greg)

	Improvement of Special SuSE init files (Willems Luc)
	Spec file improvements and testing under SuSE (Willems Luc)
	PLD build patch from Arkadiusz Miskiewicz

	re-execute up-commands on re-up under persist-keep (David Kimdon, Leo Bergolth)
	prevent reentering syslog in signal handlers (Leo Bergolth)
	fd leak in tunnel.c (David Kimdon, Leo Bergolth)
	fix configure wrt openSSL and SASL to pick correct MD5.h (Leo Bergolth)
	prevent closing non-existant stat file (Edan Ayal)
	minor packaging improvements (Bishop Clark)

ver 2.5:
	 New config option to keep tun device always open
	 iproute support
	 Fixes to support both Linux TUN/TAP drivers.

ver 2.5b1:
	 Encryption fixes: improved challenge generation, padding check.
	 Config parser fixes. Don't allow empty passwords.
	 New config option to specify syslog logging facility.
	 Support for new Linux TUN/TAP driver.
	 IO (read_n/write_n) cancellation.
	 Signal handling and other minor fixes.
	 Makefile improvement.
	 Documentation update.

ver 2.4:
	 Configurable keep-alive. Fix for 0 compression level.
	 RPM package and documentation update.

ver 2.4b2:
	 TCP driver fixes. Modules and frame handling optimizations.
	 Configure options to disable LZO, ZLIB, OpenSSL and Shaper support.
	 Cleanups. Documentation update.

ver 2.4b1:
	 Numerous stability fixes. TCP driver fixes.
	 Improved TUN driver support for Solaris 8.
	 Fixed incorrect error handling in read_n/write_n. 
	 Signal handling fix. Persist mode fixes.
	 Memory handling fixes. New config options.
	 Command path parsing fix.
	 Documentation update and spelling fixes.

ver 2.3:
	 Fixed incorrect error handling in UDP and TCP drivers. Makefile 