@@ -1,6 +1,6 @@
 PKG="vtun"
 NAME="VTun - Virtual tunnels over TCP/IP"
-VERSION="2.5.2"
+VERSION="2.5.3"
 ARCH="i386"
 VENDOR="Maxim Krasnyansky"
 EMAIL="max_mk@yahoo.com"
